--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reflect-ai",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,14 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@elevenlabs/react": "^0.1.5",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@supabase/supabase-js": "^2.38.4",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.9",
+    "expo-constants": "^17.1.6",
+    "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
+    "lucide-react": "^0.511.0",
+    "lucide-react-native": "^0.511.0",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^13.9.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-dev-client": "~5.1.8",
+    "react-native-webview": "13.13.5",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "react-native-reanimated": "^3.17.5",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.8.3"
   },
   "private": true
