--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@elevenlabs/react": "^0.1.5",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
@@ -17,22 +18,21 @@
     "dotenv": "^16.5.0",
     "expo": "~53.0.9",
     "expo-constants": "^17.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.511.0",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "^13.9.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-dev-client": "~5.1.8",
-    "react-native-webview": "13.13.5",
     "react-dom": "19.0.0",
+    "react-native": "^0.79.2",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
