--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@11labs/react": "^0.1.4",
     "@elevenlabs/react": "^0.1.5",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
@@ -17,6 +18,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "dotenv": "^16.5.0",
     "expo": "~53.0.9",
+    "expo-av": "~15.1.4",
     "expo-constants": "^17.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-linear-gradient": "~14.1.4",
