--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.5.0",
     "expo": "~53.0.9",
     "expo-av": "~15.1.4",
+    "expo-blur": "^14.1.5",
     "expo-constants": "^17.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-linear-gradient": "~14.1.4",
@@ -29,9 +30,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5"
