--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@11labs/react": "^0.1.4",
     "@elevenlabs/react": "^0.1.5",
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@supabase/supabase-js": "^2.38.4",
     "dotenv": "^16.5.0",
